--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -3,6 +3,7 @@
 %table
   %tr
     %th Name
+    %th Point
     %th
     %th
     %th
@@ -10,6 +11,7 @@
   - @users.each do |user|
     %tr
       %td= user.name
+      %td= user.tasks.pluck(:point).sum
       %td= link_to 'Show', user
       %td= link_to 'Edit', edit_user_path(user)
       %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
