--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -28,3 +28,6 @@
       %td= task.completed_at
       %td= task.point
       %td= link_to task.user.name, user_path(task.user)
+
+%h2 Calendar
+%iframe{frameborder: "0", height: "300", scrolling: "no", src: "https://www.google.com/calendar/embed?showTitle=0&showNav=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0&height=300&wkst=2&bgcolor=%23FFFFFF&src=#{CGI.escape(ENV['GOOGLE_CALENDAR_ID'])}&color=%232F6309&ctz=Asia%2FTokyo", style: " border-width:0 ", width: "300"}
