--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
 %head
   = display_meta_tags site: '家事スタンプ'
-  = display_meta_tags og: {title: '家事スタンプ', image: image_url('logo_mini.png')}
+  = display_meta_tags og: {title: '家事スタンプ', image: image_url('logo_pu.png')}
   = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
   = javascript_include_tag "application", "data-turbolinks-track" => true
   = csrf_meta_tags
